Consume metrics and use them for auto-scaling - WIP
The autoscaler unit tests resort to white box testing to avoid races. Rather
than running receive and sampling loops, the autoscaler is told when to:
  * receive specific metrics, and
  * take a sample.

Limitations

The autoscaler will happily scale a function pod to 0 replicas in either of the following situations:
  * the input topic contains messages still to be processed,
  * the function is continuing to produce output messages.

--- a/function-controller/Makefile
+++ b/function-controller/Makefile
@@ -11,11 +11,17 @@ test: ../vendor
 $(OUTPUT): $(GO_SOURCES) ../vendor
 	go build cmd/function-controller.go
 
-gen-mocks: ../vendor
+gen-mocks: $(GO_SOURCES) ../vendor
 	mockery -name 'TopicInformer|FunctionInformer' -dir ../kubernetes-crds/pkg/client/informers/externalversions/projectriff/v1
 	mockery -name 'SharedIndexInformer' -dir ../vendor/k8s.io/client-go/tools/cache
 	mockery -name 'DeploymentInformer' -dir ../vendor/k8s.io/client-go/informers/extensions/v1beta1
-	mockery -name 'LagTracker|Deployer' -dir pkg/controller
+	mockery -name 'Deployer' -dir pkg/controller
+	go get -u github.com/vektra/mockery/.../
+	go generate ./...
+
+# verify generated mocks which are committed or staged are up to date
+verify-mocks: gen-mocks
+	git diff --exit-code $(GENERATED_SOURCES)
 
 clean:
 	rm -f $(OUTPUT)
