Drive autoscaler with simulated workload - WORK IN PROGRESS
Also introduce a nested PID controller into the autoscaler.

Thanks to @jchesterpivotal for providing the initial version of the simulator.

--- a/function-controller/Makefile
+++ b/function-controller/Makefile
@@ -43,3 +43,8 @@ debug-dockerize: $(GO_SOURCES) ../vendor
 
 kubectl-apply:
 	kubectl apply -f config/deployment.yaml
+
+simulation:
+	go build pkg/controller/autoscaler/simulator/simulator.go
+	./simulator
+	gnuplot -c pkg/controller/autoscaler/simulator/simulator.plt > simulation-results.png
