Add a PID controller to the autoscaler - WIP
Add noisy section to the simulator.

Switch to exponential smoothing.

Try integrator preloading.

--- a/function-controller/Makefile
+++ b/function-controller/Makefile
@@ -48,3 +48,4 @@ simulation:
 	go build pkg/controller/autoscaler/simulator/simulator.go
 	./simulator
 	gnuplot -c pkg/controller/autoscaler/simulator/simulator.plt > simulation-results.png
+	osascript refresh-preview.scpt
